[gd_scene load_steps=19 format=3 uid="uid://bv4gega1vsimx"]

[ext_resource type="Script" path="res://Enemy/Script/_Global_Enemy_Script.gd" id="1_wm4gu"]
[ext_resource type="Shader" uid="uid://e8lvcbmerfsm" path="res://Shaders/Hit_Flash.tres" id="2_d2w4l"]
[ext_resource type="Texture2D" uid="uid://lbg7jj43qvke" path="res://Game_Assets/Asesprite_Bowz/Skelleton.png" id="3_65vvs"]
[ext_resource type="Texture2D" uid="uid://crwxqd0jdm6pb" path="res://Game_Assets/HP.png" id="3_yn74v"]
[ext_resource type="PackedScene" uid="uid://b4lu3ggo6k1af" path="res://Particles/explosion.tscn" id="4_vdcxg"]
[ext_resource type="Animation" uid="uid://b5oe3di4pd4ng" path="res://Enemy/Animation/DEATH.res" id="5_e8r1a"]
[ext_resource type="AnimationLibrary" uid="uid://tkbgryu2lipc" path="res://Presets/Animations/Key_Enemy_Animations.res" id="6_a6wm7"]
[ext_resource type="AudioStream" uid="uid://qmg8vcmuedow" path="res://SoundFX/Crunch.wav" id="6_f06qn"]
[ext_resource type="Material" uid="uid://cn818p7xcrnua" path="res://Particles/Spread.tres" id="7_ohmms"]
[ext_resource type="AudioStream" uid="uid://b6kcgvewdq5jr" path="res://SoundFX/Hurt_SFX.wav" id="8_vytp6"]
[ext_resource type="Texture2D" uid="uid://p71lkxawnp3k" path="res://Game_Assets/Asesprite_Bowz/Death_particle.png" id="9_1ocu6"]
[ext_resource type="Script" path="res://Enemy/Script/Basic_Data.gd" id="10_y2j2a"]
[ext_resource type="Texture2D" uid="uid://bepdqiexjr0gr" path="res://Game_Assets/range_overlay.png" id="13_uuw0b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j2s5o"]
resource_local_to_scene = true
shader = ExtResource("2_d2w4l")
shader_parameter/BooleanParameter = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_5dkrb"]
radius = 8.0

[sub_resource type="Animation" id="Animation_1lycw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:material:shader_parameter/time")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.57]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Death_FX:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yiqox"]
resource_name = "WALK"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tybeg"]
_data = {
"DEATH": ExtResource("5_e8r1a"),
"RESET": SubResource("Animation_1lycw"),
"WALK": SubResource("Animation_yiqox")
}

[node name="Basic" type="PathFollow2D" node_paths=PackedStringArray("Data", "Healthbar", "Movement_AnimationPlayer", "FX_AnimationPlayer", "EnemyCollison", "CharacterBody", "Sprite", "HurtSFX", "DeathSFX") groups=["enemy"]]
process_mode = 1
rotates = false
loop = false
script = ExtResource("1_wm4gu")
Data = NodePath("Data")
The_damage_the_enemy_does_to_the_player_when_he_reaches_the_end = 2
Healthbar = NodePath("CharacterBody2D/HealthBar")
Movement_AnimationPlayer = NodePath("Movement_Basic")
FX_AnimationPlayer = NodePath("FX_AnimationPlayer")
EnemyCollison = NodePath("CharacterBody2D/CollisionShape2D")
CharacterBody = NodePath("CharacterBody2D")
Sprite = NodePath("CharacterBody2D/Sprite2D")
HurtSFX = NodePath("Hurt_SFX")
DeathSFX = NodePath("Death_SFX")
metadata/_edit_horizontal_guides_ = [-23.0]

[node name="DMG_Display_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="Damage_number_spawn_Pos" type="Marker2D" parent="CharacterBody2D"]
position = Vector2(0, -8)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_j2s5o")
texture = ExtResource("3_65vvs")
region_rect = Rect2(464, 96, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_5dkrb")
debug_color = Color(1, 0, 0.701961, 0)

[node name="HealthBar" type="TextureProgressBar" parent="CharacterBody2D"]
visible = false
offset_left = -6.0
offset_top = -13.0
offset_right = 6.0
offset_bottom = -11.0
nine_patch_stretch = true
texture_under = ExtResource("3_yn74v")
texture_progress = ExtResource("3_yn74v")
tint_under = Color(0.117647, 0.0627451, 0.156863, 1)
tint_progress = Color(1, 0.360784, 0.592157, 1)
metadata/_edit_use_anchors_ = true

[node name="Death_Circle" type="Sprite2D" parent="CharacterBody2D"]
visible = false
scale = Vector2(0.0258065, 0.0258065)
texture = ExtResource("13_uuw0b")

[node name="Movement_Basic" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tybeg")
}
autoplay = "WALK"

[node name="FX_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("6_a6wm7")
}

[node name="Death_FX" parent="." instance=ExtResource("4_vdcxg")]
texture_filter = 0
material = null
amount = 24
process_material = ExtResource("7_ohmms")
texture = ExtResource("9_1ocu6")
lifetime = 0.8
one_shot = false
explosiveness = 1.0
randomness = 0.0

[node name="Death_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f06qn")
volume_db = -20.0

[node name="Hurt_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vytp6")
volume_db = -10.0

[node name="Data" type="Node" parent="."]
script = ExtResource("10_y2j2a")

[connection signal="timeout" from="DMG_Display_Timer" to="." method="_on_damage_number_timer_timeout"]
