[gd_scene load_steps=10 format=3 uid="uid://bfbt62rhaosdk"]

[ext_resource type="Script" path="res://Enemy/Script/_Global_Enemy_Script.gd" id="1_0f17r"]
[ext_resource type="Texture2D" uid="uid://dg6a87wefj5ee" path="res://Assets/Aseprite_made_by_Bowz/Tank.png" id="2_awurj"]
[ext_resource type="Texture2D" uid="uid://crwxqd0jdm6pb" path="res://Assets/HP.png" id="3_xpud1"]
[ext_resource type="PackedScene" uid="uid://b4lu3ggo6k1af" path="res://Particles/explosion.tscn" id="4_80wuy"]
[ext_resource type="Animation" uid="uid://b5oe3di4pd4ng" path="res://Enemy/Animation/DEATH.res" id="5_b3fr4"]
[ext_resource type="Animation" uid="uid://dbv7xj6pp75rx" path="res://Enemy/Animation/Spider_Walk.res" id="6_7s8r2"]
[ext_resource type="AudioStream" uid="uid://qmg8vcmuedow" path="res://Sounds/Crunch.wav" id="7_hcf4i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5dkrb"]
radius = 7.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_losel"]
_data = {
"DEATH": ExtResource("5_b3fr4"),
"WALK": ExtResource("6_7s8r2")
}

[node name="Tank" type="PathFollow2D" node_paths=PackedStringArray("Healthbar") groups=["enemy"]]
loop = false
script = ExtResource("1_0f17r")
Healthbar = NodePath("CharacterBody2D/HealthBar")
metadata/_edit_horizontal_guides_ = [-23.0]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(0, -1)

[node name="Sprite" type="Sprite2D" parent="CharacterBody2D"]
rotation = 1.5708
texture = ExtResource("2_awurj")
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_5dkrb")
debug_color = Color(1, 0, 0.701961, 0)

[node name="HealthBar" type="TextureProgressBar" parent="CharacterBody2D"]
unique_name_in_owner = true
visible = false
offset_left = -6.0
offset_top = -8.0
offset_right = 6.0
offset_bottom = -7.0
nine_patch_stretch = true
texture_under = ExtResource("3_xpud1")
texture_progress = ExtResource("3_xpud1")
tint_under = Color(0.117647, 0.0627451, 0.156863, 1)
tint_progress = Color(1, 0.360784, 0.592157, 1)

[node name="Explosion" parent="." instance=ExtResource("4_80wuy")]
amount = 14

[node name="Movement_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_losel")
}
autoplay = "WALK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hcf4i")
volume_db = -24.762

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hcf4i")
volume_db = -30.0
